--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Movie App</title>
         <link rel="stylesheet" href="styles.css" />
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         <script src="script.js" defer></script>
     </head>
     <body>
         <header>
+            <h1 class="logo">CineSphere</h1>
             <form id="form">
-                <input
-                    type="text"
-                    id="search"
-                    placeholder="Search"
-                    class="search"
-                />
+                <input type="text" id="search" placeholder="Search" class="search"/>
             </form>
+            <nav>
+                <ul class="nav_links">
+                  <li><a href="#home">Home</a></li>
+                  <li><a href="#genres">Genre</a></li>
+                  <li><a href="#Login">Login</a></li>
+                </ul>
+              </nav>
         </header>
         <main id="main"></main>
     </body>
