--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Movie App</title>
+        <title>CineSphere</title>
         <link rel="stylesheet" href="styles.css" />
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-        <script src="script.js" defer></script>
+        <script src="https://kit.fontawesome.com/e16d1936d4.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -23,5 +23,6 @@
               </nav>
         </header>
         <main id="main"></main>
+        <script src="script.js" defer></script>
     </body>
 </html>
