--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>CineSphere</title>
         <link rel="stylesheet" href="styles.css" />
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-        <script src="https://kit.fontawesome.com/e16d1936d4.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -22,7 +22,18 @@
                 </ul>
               </nav>
         </header>
-        <main id="main"></main>
+        <button type="button" id="next-btn" class="btn"><i class="fa fa-angle-double-left"></i></button>
+        <div id="topRated" class="movies-container"></div>
+        <button type="button" id="next-btn" class="btn"><i class="fa fa-angle-double-right"></i></button>
+        <button type="button" id="next-btn" class="btn"><i class="fa fa-angle-double-left"></i></button>
+        <div id="popular" class="movies-container"></div>
+        <button type="button" id="next-btn" class="btn"><i class="fa fa-angle-double-right"></i></button>
+        <button type="button" id="prev-btn" class="btn"><i class="fa fa-angle-double-left"></i></button>
+        <div id="upcoming" class="movies-container"></div>
+        <button type="button" id="next-btn" class="btn"><i class="fa fa-angle-double-right"></i></button>
         <script src="script.js" defer></script>
+        <footer>
+            <p>&copy; 2024 Will Wagura. All rights reserved.</p>
+          </footer>
     </body>
 </html>
